fixing tool page width(it was too long)

--- a/views/tools/tools.css
+++ b/views/tools/tools.css
@@ -2,7 +2,7 @@
 body{
   background-color: #04192F !important;
   margin: 0;
-  height: 815px;
+  height: 615px;
   color: rgb(231, 231, 231) !important;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -84,6 +84,7 @@ input[type='radio']:checked:after{
 }
 
 .selects-container{
+  width: 300px !important;
   top: 270px;
   left: 770px;
   color: rgb(225, 225, 225);
@@ -97,6 +98,7 @@ input[type=checkbox]:checked{
 .lenght,
 .minNumbers,
 .minSpecials{
+  width: 400px !important;
   top: 400px;
 }
 
